--- a/index.html
+++ b/index.html
@@ -54,12 +54,20 @@
       </div>
     </nav>
 
-    <section class="hero">
-      <div class="container d-flex flex-column flex-md-row align-items-center justify-content-center gap-4">
+    <section class="hero animate-section">
+      <div
+        class="container d-flex flex-column flex-md-row align-items-center justify-content-center gap-4"
+      >
         <img
           src="./svg/holybible.svg"
           alt="Holy Bible"
-          style="max-width: 340px; height: auto; flex-shrink: 0; display: block; background: none;"
+          style="
+            max-width: 340px;
+            height: auto;
+            flex-shrink: 0;
+            display: block;
+            background: none;
+          "
           class="mb-3 mb-md-0"
           onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<div style=\'color:#b8860b; font-weight:bold;\'>[Holy Bible SVG not found]</div>')"
         />
@@ -68,11 +76,13 @@
           <h1 class="display-4 gradient-text">Bond Servant of Christ</h1>
           <p class="lead text-justify" style="text-align: justify">
             I am Brother Femi, a bond servant of the Lord Jesus Christ. I am
-            constantly learning His ways from the Bible and others, and gradually
-            working to become more like Him by the day.
+            constantly learning His ways from the Bible and others, and
+            gradually working to become more like Him by the day.
           </p>
 
-          <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-start gap-3 mt-4">
+          <div
+            class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-start gap-3 mt-4"
+          >
             <a href="#contact" class="cta-link">
               <span class="cta-link-text">Let's Connect</span>
             </a>
@@ -81,19 +91,25 @@
       </div>
     </section>
 
-    <section class="section" id="mission">
-      <h2 class="section-title royal">Mission</h2>
-      <p>To be filled in.</p>
+    <section class="section animate-section text-center" id="mission">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-bullseye"></i> Mission
+      </h2>
+      <p>TBD</p>
     </section>
 
-    <section class="section" id="vision">
-      <h2 class="section-title royal">Vision</h2>
-      <p>To be filled in.</p>
+    <section class="section animate-section text-center" id="vision">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-eye"></i> Vision
+      </h2>
+      <p>TBD</p>
     </section>
 
-    <section class="section" id="core-values">
-      <h2 class="section-title royal">Core Values</h2>
-      <ul>
+    <section class="section animate-section text-center" id="core-values">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-gem"></i> Core Values
+      </h2>
+      <ul style="display: inline-block; text-align: left">
         <li><span class="gold">Love & Unity</span></li>
         <li><span class="gold">Purity/Consecration</span></li>
         <li><span class="gold">Fear & Reverence for God</span></li>
@@ -101,9 +117,11 @@
       </ul>
     </section>
 
-    <section class="section" id="heart-cry">
-      <h2 class="section-title royal">Heart-Cry</h2>
-      <ul>
+    <section class="section animate-section text-center" id="heart-cry">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-heart-pulse"></i> Heart-Cry
+      </h2>
+      <ul style="display: inline-block; text-align: left">
         <li>
           Father set me free from the spirit of pride that thinks it can sustain
           righteous
@@ -118,123 +136,75 @@
       </ul>
     </section>
 
-    <section class="section" id="mentors">
-      <h2 class="section-title royal">Mentors</h2>
+    <section class="section animate-section text-center" id="mentors">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-people"></i> Mentors
+      </h2>
       <div class="row row-cols-2 row-cols-md-5 g-3 justify-content-center">
         <div class="col">
-          <div class="mentor-card">
-            <h5>Peter Olaniran</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Peter Olaniran</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Pade Okunola</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Pade Okunola</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Benjamin Beckley</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Benjamin Beckley</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Yemi Adio</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Yemi Adio</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Dammy Olu Ayeni</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Dammy Olu Ayeni</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Micheal Orokpo</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Micheal Orokpo</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Arome Osai</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Arome Osai</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Kesiena Esiri Henry</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Kesiena Esiri Henry</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Femi Lazarus</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Femi Lazarus</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Dolapo Lawal</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Dolapo Lawal</h5>
           </div>
         </div>
         <div class="col">
-          <div class="mentor-card">
-            <h5>Emmanuel Iren</h5>
+          <div class="mentor-card card p-3 h-100 text-center">
+            <h5 class="card-title mb-0">Emmanuel Iren</h5>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="section" id="contact">
-      <h2 class="section-title royal">Contact & Socials</h2>
-      <ul class="social-list">
-        <li>
-          <a href="mailto:contact@brotherfemi.org" title="Email"
-            ><i class="bi bi-envelope"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com/thebrotherfemi/"
-            target="_blank"
-            title="Instagram"
-            ><i class="bi bi-instagram"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.threads.com/@thebrotherfemi"
-            target="_blank"
-            title="Threads"
-            ><i class="bi bi-threads"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.facebook.com/thebrotherfemi/"
-            target="_blank"
-            title="Facebook"
-            ><i class="bi bi-facebook"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.tiktok.com/@thebrotherfemi"
-            target="_blank"
-            title="TikTok"
-            ><i class="bi bi-tiktok"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.youtube.com/@thebrotherfemi"
-            target="_blank"
-            title="YouTube"
-            ><i class="bi bi-youtube"></i
-          ></a>
-        </li>
-        <li>
-          <a href="https://brotherfemi.org" target="_blank" title="Website"
-            ><i class="bi bi-globe2"></i
-          ></a>
-        </li>
-      </ul>
+    <section class="section animate-section" id="contact">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-envelope-paper"></i> Contact & Socials
+      </h2>
       <form
-        action="https://formspree.io/f/your-form-id"
+        action="https://formspree.io/f/xnnvgoen"
         method="POST"
         class="contact-form mt-4"
         style="max-width: 500px; margin: 0 auto"
@@ -271,6 +241,85 @@
         </div>
         <button type="submit" class="btn btn-primary w-100">Submit</button>
       </form>
+      <button
+        class="fab-contact"
+        title="Contact"
+        onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})"
+      >
+        <i class="bi bi-chat-dots"></i>
+      </button>
+      <button
+        class="fab-home"
+        title="Back to Home"
+        onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
+        style="
+          position: fixed;
+          bottom: 92px;
+          right: 32px;
+          z-index: 1050;
+          width: 56px;
+          height: 56px;
+          border-radius: 50%;
+          background: linear-gradient(90deg, #0288d1, #4dd0e1);
+          color: #fff;
+          border: none;
+          box-shadow: 0 4px 16px rgba(2, 136, 209, 0.18);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 2rem;
+          transition: background 0.3s, box-shadow 0.3s;
+        "
+      >
+        <i class="bi bi-house-door"></i>
+      </button>
+      <ul class="social-list">
+        <li>
+          <a href="mailto:contact@brotherfemi.org" title="Email"
+            ><i class="bi bi-envelope"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/thebrotherfemi/"
+            target="_blank"
+            title="Instagram"
+            ><i class="bi bi-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.threads.com/@thebrotherfemi"
+            target="_blank"
+            title="Threads"
+            ><i class="bi bi-threads"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.tiktok.com/@thebrotherfemi"
+            target="_blank"
+            title="TikTok"
+            ><i class="bi bi-tiktok"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/@thebrotherfemi"
+            target="_blank"
+            title="YouTube"
+            ><i class="bi bi-youtube"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.facebook.com/thebrotherfemi/"
+            target="_blank"
+            title="Facebook"
+            ><i class="bi bi-facebook"></i
+          ></a>
+        </li>
+      </ul>
     </section>
 
     <footer class="footer">
@@ -286,5 +335,29 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
     <script src="js/scripts.js"></script>
+    <script>
+      // Section entrance animation on scroll
+      function animateSectionsOnScroll() {
+        const sections = document.querySelectorAll(".animate-section");
+        const trigger = window.innerHeight * 0.85;
+        sections.forEach((section) => {
+          const rect = section.getBoundingClientRect();
+          if (rect.top < trigger) {
+            section.classList.add("visible");
+          }
+        });
+      }
+      window.addEventListener("scroll", animateSectionsOnScroll);
+      window.addEventListener("DOMContentLoaded", animateSectionsOnScroll);
+
+      // Parallax effect for hero SVG
+      const heroImg = document.querySelector('.hero img[src$="holybible.svg"]');
+      if (heroImg) {
+        window.addEventListener("scroll", function () {
+          const scrolled = window.scrollY;
+          heroImg.style.transform = `translateY(${scrolled * 0.08}px) scale(1)`;
+        });
+      }
+    </script>
   </body>
 </html>
