--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
@@ -42,6 +46,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#heart-cry">Heart-Cry</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#mentors">Mentors</a>
@@ -109,31 +116,81 @@
       <h2 class="section-title royal with-icon text-center">
         <i class="bi bi-gem"></i> Core Values
       </h2>
-      <ul style="display: inline-block; text-align: left">
-        <li><span class="gold">Love & Unity</span></li>
-        <li><span class="gold">Purity/Consecration</span></li>
-        <li><span class="gold">Fear & Reverence for God</span></li>
-        <li><span class="gold">Godly Humility</span></li>
-      </ul>
+      <div style="display: flex; flex-direction: column; align-items: center">
+        <ul style="display: inline-block; text-align: center">
+          <li><span class="gold">Love & Unity</span></li>
+          <li><span class="gold">Purity/Consecration</span></li>
+          <li><span class="gold">Fear & Reverence for God</span></li>
+          <li><span class="gold">Godly Humility</span></li>
+        </ul>
+      </div>
     </section>
 
     <section class="section animate-section text-center" id="heart-cry">
       <h2 class="section-title royal with-icon text-center">
         <i class="bi bi-heart-pulse"></i> Heart-Cry
       </h2>
-      <ul style="display: inline-block; text-align: left">
-        <li>
-          Father set me free from the spirit of pride that thinks it can sustain
-          righteous
-        </li>
-        <li>
-          Father, purge and purify every bit of SIN/Concupiscence out of my life
-        </li>
-        <li>
-          My Father, count me amongst those you will have mercy on today (Rom 9)
-        </li>
-        <li>Give me the ability to obey you promptly without negotiations!</li>
-      </ul>
+      <div style="display: flex; flex-direction: column; align-items: center">
+        <ul style="display: inline-block; text-align: center">
+          <li>
+            Father set me free from the spirit of pride that thinks it can
+            sustain righteous
+          </li>
+          <li>
+            Father, purge and purify every bit of SIN/Concupiscence out of my
+            life
+          </li>
+          <li>
+            My Father, count me amongst those you will have mercy on today (Rom
+            9)
+          </li>
+          <li>
+            Give me the ability to obey you promptly without negotiations!
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="section animate-section text-center" id="about">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-person"></i> My Testimony
+      </h2>
+      <p class="about-text">
+        On the 25th of June 2025, at
+        <a
+          href="https://www.instagram.com/howj_global"
+          target="_blank"
+          rel="noopener"
+          >HOWJ Atlanta</a
+        >
+        I had a life-changing encounter with the Lord Jesus Christ. It was a
+        moment of divine personal conviction, revelation and transformation that
+        set me on a new path of faith and purpose - I had a strong nudge in my
+        soul to search God afresh at all cost. Since then, I have been committed
+        to living as a bond servant of Christ, seeking to know Him more deeply
+        and to reflect His love and grace in all aspects of my life.
+      </p>
+      <br />
+      <p class="about-text">
+        This website is a faith-inspired space to share my journey, connect
+        with fellow believers, and encourage a Christ-centered life of love,
+        humility, and purpose.
+      </p>
+      <br />
+      <p class="about-text">
+        I look forward to hearing from you, sharing insights, and growing
+        together in faith. May the grace and peace of our Lord Jesus Christ be
+        with you always.
+      </p>
+      <div class="instagram-embed-responsive">
+        <iframe
+          src="https://www.instagram.com/p/DKRRpO4CCm9/embed"
+          allowtransparency="true"
+          allowfullscreen="true"
+          frameborder="0"
+          scrolling="no"
+        ></iframe>
+      </div>
     </section>
 
     <section class="section animate-section text-center" id="mentors">
@@ -252,24 +309,6 @@
         class="fab-home"
         title="Back to Home"
         onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
-        style="
-          position: fixed;
-          bottom: 92px;
-          right: 32px;
-          z-index: 1050;
-          width: 56px;
-          height: 56px;
-          border-radius: 50%;
-          background: linear-gradient(90deg, #0288d1, #4dd0e1);
-          color: #fff;
-          border: none;
-          box-shadow: 0 4px 16px rgba(2, 136, 209, 0.18);
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          font-size: 2rem;
-          transition: background 0.3s, box-shadow 0.3s;
-        "
       >
         <i class="bi bi-house-door"></i>
       </button>
@@ -335,29 +374,5 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
     <script src="js/scripts.js"></script>
-    <script>
-      // Section entrance animation on scroll
-      function animateSectionsOnScroll() {
-        const sections = document.querySelectorAll(".animate-section");
-        const trigger = window.innerHeight * 0.85;
-        sections.forEach((section) => {
-          const rect = section.getBoundingClientRect();
-          if (rect.top < trigger) {
-            section.classList.add("visible");
-          }
-        });
-      }
-      window.addEventListener("scroll", animateSectionsOnScroll);
-      window.addEventListener("DOMContentLoaded", animateSectionsOnScroll);
-
-      // Parallax effect for hero SVG
-      const heroImg = document.querySelector('.hero img[src$="holybible.svg"]');
-      if (heroImg) {
-        window.addEventListener("scroll", function () {
-          const scrolled = window.scrollY;
-          heroImg.style.transform = `translateY(${scrolled * 0.08}px) scale(1)`;
-        });
-      }
-    </script>
   </body>
 </html>
