--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <p class="about-text">
         On the 25th of June 2025, at
         <a
-          href="https://www.instagram.com/howj_global"
+          href="https://howjglobal.org/"
           target="_blank"
           rel="noopener"
           >HOWJ Atlanta</a
