--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <i class="bi bi-person"></i> My Testimony
       </h2>
       <p class="about-text">
-        On the 25th of June 2025, at
+        On the 22nd of June 2025, at
         <a
           href="https://howjglobal.org/"
           target="_blank"
