--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
+              <a class="nav-link" href="#worship">Worship & Adoration</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#mission">Mission</a>
             </li>
             <li class="nav-item">
@@ -52,6 +55,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#mentors">Mentors</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#the-word">The Word</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -97,7 +103,45 @@
         </div>
       </div>
     </section>
-
+    <section class="section animate-section text-center" id="worship">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-music-note-beamed"></i> Worship & Adoration
+      </h2>
+      <p class="about-text">
+        "God is Spirit, and those who worship Him must worship in spirit and
+        truth."<br />
+        <span style="font-size: 1rem; color: #0288d1">— John 4:24</span>
+      </p>
+      <p class="about-text">
+        True worship is a lifestyle of surrender, reverence, and love for God.
+        Let every moment, word, and song be an offering of adoration to the King
+        of kings.
+      </p>
+      <div
+        class="youtube-playlist-embed mb-4 playlist-animate"
+      >
+        <div>
+          <iframe
+            src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCU10rmhe9Y1Lw4ckTci4RvK&rel=0&pp=gAQB"
+            title="Worship & Adoration"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          ></iframe>
+        </div>
+        <div
+          style="
+            padding: 1rem;
+            background: linear-gradient(90deg, #f8fafc 60%, #e3f2fd 100%);
+            text-align: center;
+          "
+        >
+          <span style="font-weight: 600; color: #0288d1">
+            <i class="bi bi-youtube" style="color: #ff0000"></i> Worship &
+            Adoration
+          </span>
+        </div>
+      </div>
+  
+    </section>
     <section class="section animate-section text-center" id="mission">
       <h2 class="section-title royal with-icon text-center">
         <i class="bi bi-bullseye"></i> Mission
@@ -157,10 +201,7 @@
       </h2>
       <p class="about-text">
         On the 22nd of June 2025, at
-        <a
-          href="https://howjglobal.org/"
-          target="_blank"
-          rel="noopener"
+        <a href="https://howjglobal.org/" target="_blank" rel="noopener"
           >HOWJ Atlanta</a
         >
         I had a life-changing encounter with the Lord Jesus Christ. It was a
@@ -172,8 +213,8 @@
       </p>
       <br />
       <p class="about-text">
-        This website is a faith-inspired space to share my journey, connect
-        with fellow believers, and encourage a Christ-centered life of love,
+        This website is a faith-inspired space to share my journey, connect with
+        fellow believers, and encourage a Christ-centered life of love,
         humility, and purpose.
       </p>
       <br />
@@ -252,6 +293,41 @@
           <div class="mentor-card card p-3 h-100 text-center">
             <h5 class="card-title mb-0">Emmanuel Iren</h5>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="section animate-section text-center" id="the-word">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-journal-text"></i> The Word
+      </h2>
+      <p class="about-text">
+        "Let the word of Christ dwell in you richly in all wisdom; teaching and
+        admonishing one another in psalms and hymns and spiritual songs, singing
+        with grace in your hearts to the Lord."<br />
+        <span style="font-size: 1rem; color: #0288d1">— Colossians 3:16</span>
+      </p>
+      <p class="about-text">
+        May the Word of God be your guide, your strength, and your joy. Stay
+        rooted in Christ, and let His truth shape your every step.
+      </p>
+          <div class="youtube-playlist-embed mb-4 playlist-animate">
+        <div>
+          <iframe
+            src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCVmKkD32sPz78wI8IBvYkZ5&rel=0&pp=gAQB"
+            title="Messages Playlist"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          ></iframe>
+        </div>
+        <div
+          style="
+            padding: 1rem;
+            background: linear-gradient(90deg, #f8fafc 60%, #e3f2fd 100%);
+            text-align: center;
+          "
+        >
+          <span style="font-weight: 600; color: #0288d1">
+            <i class="bi bi-youtube" style="color: #ff0000"></i> Messages
+          </span>
         </div>
       </div>
     </section>
