--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
               <a class="nav-link" href="#the-word">The Word</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#hymns">Hymns</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
@@ -310,7 +313,7 @@
         May the Word of God be your guide, your strength, and your joy. Stay
         rooted in Christ, and let His truth shape your every step.
       </p>
-          <div class="youtube-playlist-embed mb-4 playlist-animate">
+      <div class="youtube-playlist-embed mb-4 playlist-animate">
         <div>
           <iframe
             src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCVmKkD32sPz78wI8IBvYkZ5&rel=0&pp=gAQB"
@@ -327,6 +330,38 @@
         >
           <span style="font-weight: 600; color: #0288d1">
             <i class="bi bi-youtube" style="color: #ff0000"></i> Messages
+          </span>
+        </div>
+      </div>
+    </section>
+    <section class="section animate-section text-center" id="hymns">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-music-note-list"></i> Hymns
+      </h2>
+      <p class="about-text">
+        "Let everything that has breath praise the Lord!"<br />
+        <span style="font-size: 1rem; color: #0288d1">— Psalm 150:6</span>
+      </p>
+      <p class="about-text">
+        Enjoy a curated playlist of classic and contemporary hymns to uplift your spirit and draw you closer to God.
+      </p>
+      <div class="youtube-playlist-embed mb-4 playlist-animate">
+        <div>
+          <iframe
+            src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCX5gXgnt6Xb0gQi0gCRfVgN&rel=0&pp=gAQB"
+            title="Hymns Playlist"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          ></iframe>
+        </div>
+        <div
+          style="
+            padding: 1rem;
+            background: linear-gradient(90deg, #f8fafc 60%, #e3f2fd 100%);
+            text-align: center;
+          "
+        >
+          <span style="font-weight: 600; color: #0288d1">
+            <i class="bi bi-youtube" style="color: #ff0000"></i> Hymns
           </span>
         </div>
       </div>
