--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <a class="nav-link" href="#the-word">The Word</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#hymns">Hymns</a>
+              <a class="nav-link" href="#blog">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -120,9 +120,7 @@
         Let every moment, word, and song be an offering of adoration to the King
         of kings.
       </p>
-      <div
-        class="youtube-playlist-embed mb-4 playlist-animate"
-      >
+      <div class="youtube-playlist-embed mb-4 playlist-animate">
         <div>
           <iframe
             src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCU10rmhe9Y1Lw4ckTci4RvK&rel=0&pp=gAQB"
@@ -143,7 +141,6 @@
           </span>
         </div>
       </div>
-  
     </section>
     <section class="section animate-section text-center" id="mission">
       <h2 class="section-title royal with-icon text-center">
@@ -334,37 +331,179 @@
         </div>
       </div>
     </section>
-    <section class="section animate-section text-center" id="hymns">
+    <section class="section animate-section text-center" id="blog">
       <h2 class="section-title royal with-icon text-center">
-        <i class="bi bi-music-note-list"></i> Hymns
+        <i class="bi bi-journal-richtext"></i> Blog
       </h2>
       <p class="about-text">
-        "Let everything that has breath praise the Lord!"<br />
-        <span style="font-size: 1rem; color: #0288d1">— Psalm 150:6</span>
+        Welcome to the Blog! Here you'll find faith-inspired blog posts,
+        testimonies, and reflections from Brother Femi. Stay tuned for updates
+        and new entries.
       </p>
-      <p class="about-text">
-        Enjoy a curated playlist of classic and contemporary hymns to uplift your spirit and draw you closer to God.
-      </p>
-      <div class="youtube-playlist-embed mb-4 playlist-animate">
-        <div>
+      <div
+        class="accordion blog-accordion mx-auto mb-4"
+        id="blogAccordion"
+        style="max-width: 700px; text-align: left"
+      >
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="blog0-heading">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#blog0"
+              aria-expanded="false"
+              aria-controls="blog0"
+            >
+              <i class="bi bi-moon-stars"></i> Midnight Encounter
+            </button>
+          </h2>
+          <div
+            id="blog0"
+            class="accordion-collapse collapse"
+            aria-labelledby="blog0-heading"
+            data-bs-parent="#blogAccordion"
+          >
+            <div class="accordion-body">
+              A life-changing midnight encounter with God that deepened my walk with Christ and taught me the value of seeking Him in the stillness.
+              <div class="text-end mt-3">
+                <a
+                  href="#"
+                  class="btn btn-outline-primary btn-sm read-more-btn"
+                  data-blog="midnight-encounter.html"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="blog1-heading">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#blog1"
+              aria-expanded="false"
+              aria-controls="blog1"
+            >
+              <i class="bi bi-feather"></i> My Journey to Faith
+            </button>
+          </h2>
+          <div
+            id="blog1"
+            class="accordion-collapse collapse"
+            aria-labelledby="blog1-heading"
+            data-bs-parent="#blogAccordion"
+          >
+            <div class="accordion-body">
+              A personal testimony of how I encountered Christ and the lessons
+              learned along the way.
+              <div class="text-end mt-3">
+                <a
+                  href="#"
+                  class="btn btn-outline-primary btn-sm read-more-btn"
+                  data-blog="my-journey-to-faith.html"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="blog2-heading">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#blog2"
+              aria-expanded="false"
+              aria-controls="blog2"
+            >
+              <i class="bi bi-lightbulb"></i> Lessons from the Valley
+            </button>
+          </h2>
+          <div
+            id="blog2"
+            class="accordion-collapse collapse"
+            aria-labelledby="blog2-heading"
+            data-bs-parent="#blogAccordion"
+          >
+            <div class="accordion-body">
+              Reflections on spiritual growth during difficult seasons and how
+              God uses challenges for our good.
+              <div class="text-end mt-3">
+                <a
+                  href="#"
+                  class="btn btn-outline-primary btn-sm read-more-btn"
+                  data-blog="lessons-from-the-valley.html"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="blog3-heading">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#blog3"
+              aria-expanded="false"
+              aria-controls="blog3"
+            >
+              <i class="bi bi-music-note"></i> Worship as a Lifestyle
+            </button>
+          </h2>
+          <div
+            id="blog3"
+            class="accordion-collapse collapse"
+            aria-labelledby="blog3-heading"
+            data-bs-parent="#blogAccordion"
+          >
+            <div class="accordion-body">
+              Exploring what it means to worship God in spirit and truth every
+              day, not just in song.
+              <div class="text-end mt-3">
+                <a
+                  href="#"
+                  class="btn btn-outline-primary btn-sm read-more-btn"
+                  data-blog="worship-as-a-lifestyle.html"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+      <!-- Blog Modal for reading posts -->
+      <div
+        id="blogModal"
+        class="blog-modal"
+        tabindex="-1"
+        aria-hidden="true"
+        style="display: none"
+      >
+        <div class="blog-modal-backdrop"></div>
+        <div class="blog-modal-content">
+          <button
+            class="blog-modal-close"
+            aria-label="Close"
+            title="Close (Esc)"
+          >
+            &times;
+          </button>
           <iframe
-            src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCX5gXgnt6Xb0gQi0gCRfVgN&rel=0&pp=gAQB"
-            title="Hymns Playlist"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            id="blogModalIframe"
+            src=""
+            frameborder="0"
+            allowfullscreen
           ></iframe>
         </div>
-        <div
-          style="
-            padding: 1rem;
-            background: linear-gradient(90deg, #f8fafc 60%, #e3f2fd 100%);
-            text-align: center;
-          "
-        >
-          <span style="font-weight: 600; color: #0288d1">
-            <i class="bi bi-youtube" style="color: #ff0000"></i> Hymns
-          </span>
-        </div>
       </div>
+      <!-- End Blog Modal -->
     </section>
 
     <section class="section animate-section" id="contact">
