--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brother Femi | Bond Servant of Christ</title>
+    <meta
+      name="description"
+      content="Brother Femi | Bond Servant of Christ. Faith-inspired blog, testimonies, worship, hymns, and resources to encourage a Christ-centered life."
+    />
+    <meta
+      name="keywords"
+      content="Brother Femi, Christian blog, faith, testimony, worship, hymns, Jesus, Christ, spiritual growth, devotion, Christian resources"
+    />
+    <meta name="author" content="Brother Femi" />
+    <meta property="og:title" content="Brother Femi | Bond Servant of Christ" />
+    <meta
+      property="og:description"
+      content="Faith-inspired blog, testimonies, worship, hymns, and resources to encourage a Christ-centered life."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://brotherfemi.org/" />
+    <meta property="og:image" content="https://brotherfemi.org/svg/holybible.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Brother Femi | Bond Servant of Christ" />
+    <meta
+      name="twitter:description"
+      content="Faith-inspired blog, testimonies, worship, hymns, and resources to encourage a Christ-centered life."
+    />
+    <meta name="twitter:image" content="https://brotherfemi.org/svg/holybible.svg" />
+    <link rel="canonical" href="https://brotherfemi.org/" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -61,6 +86,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#blog">Blog</a>
+            </li>
+              <li class="nav-item">
+              <a class="nav-link" href="#hymns">Hymns</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -365,7 +393,9 @@
             data-bs-parent="#blogAccordion"
           >
             <div class="accordion-body">
-              A life-changing midnight encounter with God that deepened my walk with Christ and taught me the value of seeking Him in the stillness.
+              A life-changing midnight encounter with God that deepened my walk
+              with Christ and taught me the value of seeking Him in the
+              stillness.
               <div class="text-end mt-3">
                 <a
                   href="#"
@@ -476,7 +506,6 @@
             </div>
           </div>
         </div>
-        
       </div>
       <!-- Blog Modal for reading posts -->
       <div
@@ -504,6 +533,40 @@
         </div>
       </div>
       <!-- End Blog Modal -->
+    </section>
+
+    <section class="section animate-section text-center" id="hymns">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-music-note-list"></i> Hymns
+      </h2>
+      <p class="about-text">
+        "Sing to the Lord, all the earth; proclaim the good news of His salvation from day to day."
+        <br />
+        <span style="font-size: 1rem; color: #0288d1">— 1 Chronicles 16:23</span>
+      </p>
+      <p class="about-text">
+        Enjoy a curated playlist of classic and contemporary hymns to inspire your worship and devotion.
+      </p>
+      <div class="youtube-playlist-embed mb-4 playlist-animate">
+        <div>
+          <iframe
+            src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCX5gXgnt6Xb0gQi0gCRfVgN&rel=0&pp=gAQB"
+            title="Hymns Playlist"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          ></iframe>
+        </div>
+        <div
+          style="
+            padding: 1rem;
+            background: linear-gradient(90deg, #f8fafc 60%, #e3f2fd 100%);
+            text-align: center;
+          "
+        >
+          <span style="font-weight: 600; color: #0288d1">
+            <i class="bi bi-youtube" style="color: #ff0000"></i> Hymns
+          </span>
+        </div>
+      </div>
     </section>
 
     <section class="section animate-section" id="contact">
