--- a/index.html
+++ b/index.html
@@ -149,23 +149,10 @@
         of kings.
       </p>
       <div class="youtube-playlist-embed mb-4 playlist-animate">
-        <div>
-          <iframe
-            src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCU10rmhe9Y1Lw4ckTci4RvK&rel=0&pp=gAQB"
-            title="Worship & Adoration"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          ></iframe>
-        </div>
-        <div
-          style="
-            padding: 1rem;
-            background: linear-gradient(90deg, #f8fafc 60%, #e3f2fd 100%);
-            text-align: center;
-          "
-        >
-          <span style="font-weight: 600; color: #0288d1">
-            <i class="bi bi-youtube" style="color: #ff0000"></i> Worship &
-            Adoration
+        <div id="yt-worship"></div>
+        <div class="youtube-playlist-label">
+          <span class="youtube-playlist-label-text">
+            <i class="bi bi-youtube" style="color: #ff0000"></i> Worship & Adoration
           </span>
         </div>
       </div>
@@ -339,21 +326,9 @@
         rooted in Christ, and let His truth shape your every step.
       </p>
       <div class="youtube-playlist-embed mb-4 playlist-animate">
-        <div>
-          <iframe
-            src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCVmKkD32sPz78wI8IBvYkZ5&rel=0&pp=gAQB"
-            title="Messages Playlist"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          ></iframe>
-        </div>
-        <div
-          style="
-            padding: 1rem;
-            background: linear-gradient(90deg, #f8fafc 60%, #e3f2fd 100%);
-            text-align: center;
-          "
-        >
-          <span style="font-weight: 600; color: #0288d1">
+        <div id="yt-word"></div>
+        <div class="youtube-playlist-label">
+          <span class="youtube-playlist-label-text">
             <i class="bi bi-youtube" style="color: #ff0000"></i> Messages
           </span>
         </div>
@@ -548,21 +523,9 @@
         Enjoy a curated playlist of classic and contemporary hymns to inspire your worship and devotion.
       </p>
       <div class="youtube-playlist-embed mb-4 playlist-animate">
-        <div>
-          <iframe
-            src="https://www.youtube.com/embed/videoseries?list=PL9GoCpwDjkCX5gXgnt6Xb0gQi0gCRfVgN&rel=0&pp=gAQB"
-            title="Hymns Playlist"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          ></iframe>
-        </div>
-        <div
-          style="
-            padding: 1rem;
-            background: linear-gradient(90deg, #f8fafc 60%, #e3f2fd 100%);
-            text-align: center;
-          "
-        >
-          <span style="font-weight: 600; color: #0288d1">
+        <div id="yt-hymns"></div>
+        <div class="youtube-playlist-label">
+          <span class="youtube-playlist-label-text">
             <i class="bi bi-youtube" style="color: #ff0000"></i> Hymns
           </span>
         </div>
@@ -682,10 +645,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <script src="js/scripts.js"></script>
   </body>
 </html>
