updated with json files instaed of hardcoding

--- a/index.html
+++ b/index.html
@@ -20,14 +20,23 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://brotherfemi.org/" />
-    <meta property="og:image" content="https://brotherfemi.org/svg/holybible.svg" />
+    <meta
+      property="og:image"
+      content="https://brotherfemi.org/svg/holybible.svg"
+    />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Brother Femi | Bond Servant of Christ" />
+    <meta
+      name="twitter:title"
+      content="Brother Femi | Bond Servant of Christ"
+    />
     <meta
       name="twitter:description"
       content="Faith-inspired blog, testimonies, worship, hymns, and resources to encourage a Christ-centered life."
     />
-    <meta name="twitter:image" content="https://brotherfemi.org/svg/holybible.svg" />
+    <meta
+      name="twitter:image"
+      content="https://brotherfemi.org/svg/holybible.svg"
+    />
     <link rel="canonical" href="https://brotherfemi.org/" />
     <link
       rel="stylesheet"
@@ -87,7 +96,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#blog">Blog</a>
             </li>
-              <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="#hymns">Hymns</a>
             </li>
             <li class="nav-item">
@@ -138,21 +147,13 @@
       <h2 class="section-title royal with-icon text-center">
         <i class="bi bi-music-note-beamed"></i> Worship & Adoration
       </h2>
-      <p class="about-text">
-        "God is Spirit, and those who worship Him must worship in spirit and
-        truth."<br />
-        <span style="font-size: 1rem; color: #0288d1">— John 4:24</span>
-      </p>
-      <p class="about-text">
-        True worship is a lifestyle of surrender, reverence, and love for God.
-        Let every moment, word, and song be an offering of adoration to the King
-        of kings.
-      </p>
+      <!-- Dynamic worship text will be rendered here by JS -->
       <div class="youtube-playlist-embed mb-4 playlist-animate">
         <div id="yt-worship"></div>
         <div class="youtube-playlist-label">
           <span class="youtube-playlist-label-text">
-            <i class="bi bi-youtube" style="color: #ff0000"></i> Worship & Adoration
+            <i class="bi bi-youtube" style="color: #ff0000"></i> Worship &
+            Adoration
           </span>
         </div>
       </div>
@@ -161,14 +162,28 @@
       <h2 class="section-title royal with-icon text-center">
         <i class="bi bi-bullseye"></i> Mission
       </h2>
-      <p>TBD</p>
+      <div style="display: flex; flex-direction: column; align-items: center">
+        <p
+          id="mission-text"
+          style="display: inline-block; text-align: left; margin: 0 auto"
+        >
+          TBD
+        </p>
+      </div>
     </section>
 
     <section class="section animate-section text-center" id="vision">
       <h2 class="section-title royal with-icon text-center">
         <i class="bi bi-eye"></i> Vision
       </h2>
-      <p>TBD</p>
+      <div style="display: flex; flex-direction: column; align-items: center">
+        <p
+          id="vision-text"
+          style="display: inline-block; text-align: left; margin: 0 auto"
+        >
+          TBD
+        </p>
+      </div>
     </section>
 
     <section class="section animate-section text-center" id="core-values">
@@ -176,12 +191,10 @@
         <i class="bi bi-gem"></i> Core Values
       </h2>
       <div style="display: flex; flex-direction: column; align-items: center">
-        <ul style="display: inline-block; text-align: center">
-          <li><span class="gold">Love & Unity</span></li>
-          <li><span class="gold">Purity/Consecration</span></li>
-          <li><span class="gold">Fear & Reverence for God</span></li>
-          <li><span class="gold">Godly Humility</span></li>
-        </ul>
+        <ul
+          id="core-values-list"
+          style="display: inline-block; text-align: left; margin: 0 auto"
+        ></ul>
       </div>
     </section>
 
@@ -190,23 +203,10 @@
         <i class="bi bi-heart-pulse"></i> Heart-Cry
       </h2>
       <div style="display: flex; flex-direction: column; align-items: center">
-        <ul style="display: inline-block; text-align: center">
-          <li>
-            Father set me free from the spirit of pride that thinks it can
-            sustain righteous
-          </li>
-          <li>
-            Father, purge and purify every bit of SIN/Concupiscence out of my
-            life
-          </li>
-          <li>
-            My Father, count me amongst those you will have mercy on today (Rom
-            9)
-          </li>
-          <li>
-            Give me the ability to obey you promptly without negotiations!
-          </li>
-        </ul>
+        <ul
+          id="heart-cry-list"
+          style="display: inline-block; text-align: left; margin: 0 auto"
+        ></ul>
       </div>
     </section>
 
@@ -214,101 +214,27 @@
       <h2 class="section-title royal with-icon text-center">
         <i class="bi bi-person"></i> My Testimony
       </h2>
-      <p class="about-text">
-        On the 22nd of June 2025, at
-        <a href="https://howjglobal.org/" target="_blank" rel="noopener"
-          >HOWJ Atlanta</a
-        >
-        I had a life-changing encounter with the Lord Jesus Christ. It was a
-        moment of divine personal conviction, revelation and transformation that
-        set me on a new path of faith and purpose - I had a strong nudge in my
-        soul to search God afresh at all cost. Since then, I have been committed
-        to living as a bond servant of Christ, seeking to know Him more deeply
-        and to reflect His love and grace in all aspects of my life.
-      </p>
-      <br />
-      <p class="about-text">
-        This website is a faith-inspired space to share my journey, connect with
-        fellow believers, and encourage a Christ-centered life of love,
-        humility, and purpose.
-      </p>
-      <br />
-      <p class="about-text">
-        I look forward to hearing from you, sharing insights, and growing
-        together in faith. May the grace and peace of our Lord Jesus Christ be
-        with you always.
-      </p>
-      <div class="instagram-embed-responsive">
-        <iframe
-          src="https://www.instagram.com/p/DKRRpO4CCm9/embed"
-          allowtransparency="true"
-          allowfullscreen="true"
-          frameborder="0"
-          scrolling="no"
-        ></iframe>
+      <div style="display: flex; flex-direction: column; align-items: center">
+        <div
+          id="testimony-text"
+          style="display: inline-block; text-align: left; margin: 0 auto"
+        ></div>
       </div>
+      <div
+        class="instagram-embed-responsive"
+        id="testimony-iframe-container"
+      ></div>
     </section>
 
     <section class="section animate-section text-center" id="mentors">
       <h2 class="section-title royal with-icon text-center">
         <i class="bi bi-people"></i> Mentors
       </h2>
-      <div class="row row-cols-2 row-cols-md-5 g-3 justify-content-center">
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Peter Olaniran</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Pade Okunola</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Benjamin Beckley</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Yemi Adio</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Dammy Olu Ayeni</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Micheal Orokpo</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Arome Osai</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Kesiena Esiri Henry</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Femi Lazarus</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Dolapo Lawal</h5>
-          </div>
-        </div>
-        <div class="col">
-          <div class="mentor-card card p-3 h-100 text-center">
-            <h5 class="card-title mb-0">Emmanuel Iren</h5>
-          </div>
-        </div>
+      <div
+        id="mentors-list"
+        class="row row-cols-2 row-cols-md-5 g-3 justify-content-center"
+      >
+        <!-- Mentor cards will be rendered here by JS -->
       </div>
     </section>
     <section class="section animate-section text-center" id="the-word">
@@ -515,12 +441,16 @@
         <i class="bi bi-music-note-list"></i> Hymns
       </h2>
       <p class="about-text">
-        "Sing to the Lord, all the earth; proclaim the good news of His salvation from day to day."
+        "Sing to the Lord, all the earth; proclaim the good news of His
+        salvation from day to day."
         <br />
-        <span style="font-size: 1rem; color: #0288d1">— 1 Chronicles 16:23</span>
+        <span style="font-size: 1rem; color: #0288d1"
+          >— 1 Chronicles 16:23</span
+        >
       </p>
       <p class="about-text">
-        Enjoy a curated playlist of classic and contemporary hymns to inspire your worship and devotion.
+        Enjoy a curated playlist of classic and contemporary hymns to inspire
+        your worship and devotion.
       </p>
       <div class="youtube-playlist-embed mb-4 playlist-animate">
         <div id="yt-hymns"></div>
@@ -588,52 +518,8 @@
       >
         <i class="bi bi-house-door"></i>
       </button>
-      <ul class="social-list">
-        <li>
-          <a href="mailto:contact@brotherfemi.org" title="Email"
-            ><i class="bi bi-envelope"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com/thebrotherfemi/"
-            target="_blank"
-            title="Instagram"
-            ><i class="bi bi-instagram"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.threads.com/@thebrotherfemi"
-            target="_blank"
-            title="Threads"
-            ><i class="bi bi-threads"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.tiktok.com/@thebrotherfemi"
-            target="_blank"
-            title="TikTok"
-            ><i class="bi bi-tiktok"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.youtube.com/@thebrotherfemi"
-            target="_blank"
-            title="YouTube"
-            ><i class="bi bi-youtube"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.facebook.com/thebrotherfemi/"
-            target="_blank"
-            title="Facebook"
-            ><i class="bi bi-facebook"></i
-          ></a>
-        </li>
+      <ul class="social-list" id="contact-social-list">
+        <!-- Social/contact links will be rendered here by JS -->
       </ul>
     </section>
 
@@ -645,7 +531,10 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
     <script src="js/scripts.js"></script>
   </body>
 </html>
