updated the christian life

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
               <a class="nav-link" href="#hymns">Hymns</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#the-christian-life">The Christian Life</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
@@ -461,7 +464,19 @@
         </div>
       </div>
     </section>
-
+    <section class="section animate-section text-center" id="the-christian-life">
+      <h2 class="section-title royal with-icon text-center">
+        <i class="bi bi-cross"></i> The Christian Life
+      </h2>
+      <div
+        id="the-christian-life-content"
+        style="max-width: 700px; margin: 0 auto; text-align: left"
+      ></div>
+      <div
+        id="the-christian-life-children"
+        style="max-width: 700px; margin: 2rem auto 0 auto; text-align: left"
+      ></div>
+    </section>
     <section class="section animate-section" id="contact">
       <h2 class="section-title royal with-icon text-center">
         <i class="bi bi-envelope-paper"></i> Contact & Socials
