--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="img/brotherfemi_icon.png" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
@@ -100,7 +101,7 @@
               <a class="nav-link" href="#hymns">Hymns</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#the-christian-life">The Christian Life</a>
+              <a class="nav-link" href="#christian-life">Christian Life</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -464,16 +465,16 @@
         </div>
       </div>
     </section>
-    <section class="section animate-section text-center" id="the-christian-life">
+    <section class="section animate-section text-center" id="christian-life">
       <h2 class="section-title royal with-icon text-center">
-        <i class="bi bi-cross"></i> The Christian Life
+        <i class="bi bi-cross"></i> Christian Life
       </h2>
       <div
-        id="the-christian-life-content"
+        id="christian-life-content"
         style="max-width: 700px; margin: 0 auto; text-align: left"
       ></div>
       <div
-        id="the-christian-life-children"
+        id="christian-life-children"
         style="max-width: 700px; margin: 2rem auto 0 auto; text-align: left"
       ></div>
     </section>
