updated warfare sections

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <a class="nav-link" href="#hymns">Hymns</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#christian-life">Christian Life</a>
+              <a class="nav-link" href="#warfare">Warfare</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -465,16 +465,16 @@
         </div>
       </div>
     </section>
-    <section class="section animate-section text-center" id="christian-life">
+    <section class="section animate-section text-center" id="warfare">
       <h2 class="section-title royal with-icon text-center">
-        <i class="bi bi-cross"></i> Christian Life
+        <i class="bi bi-cross"></i> Warfare
       </h2>
       <div
-        id="christian-life-content"
+        id="warfare-content"
         style="max-width: 700px; margin: 0 auto; text-align: left"
       ></div>
       <div
-        id="christian-life-children"
+        id="warfare-children"
         style="max-width: 700px; margin: 2rem auto 0 auto; text-align: left"
       ></div>
     </section>
